common/src/test/resources/judge-errors/java/compile-missing-semicolon.txt
Main.java:5: error: ';' expected
        int x = 1
                 ^
1 error
